<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="404dp"
        android:layout_height="48dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/label_title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="77dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="6dp">

        <TextView
            android:id="@+id/selbut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sel"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/selectedbutton"
            android:text="@string/sel_button"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textSize="18sp" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="404dp"
        android:layout_height="297dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.876">

        <Button
            android:id="@+id/btn_servicios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#3F51B5"
            android:shadowColor="#3F51B5"
            android:text="@string/btn_servicios" />

        <Button
            android:id="@+id/btnPortafolio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:shadowColor="#3F51B5"
            android:background="#3F51B5"
            android:text="@string/btn_portafolio" />

        <Button
            android:id="@+id/btnAcercaDe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#3F51B5"
            android:text="@string/btn_acercade" />

        <Button
            android:id="@+id/btnContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#3F51B5"
            android:text="@string/btn_contacto" />

        <Button
            android:id="@+id/btnRedesSociales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#3F51B5"
            android:text="@string/btnRedesSociales" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="409dp"
        android:layout_height="116dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icons8_people_64"
        tools:layout_editor_absoluteX="5dp" />

</androidx.constraintlayout.widget.ConstraintLayout>